# Machine-learning-for-energy-transition

./: .gitignore  Dockerfile  README.md  devcontainer.json  docker-compose.yaml  pyproject.toml
.github/: quarto_workflow.yaml
mlforenergytransition/book/: _quarto.yml  acronyms.tex
