[project]
name = "mlforenergytransition"
version = "0.1.0"
description = "Twiga: A Python library for point and probabilistic forecasting, inspired by the majestic giraffes of Tanzania. Twiga helps you see the future with clarity and precision, offering powerful tools for time series forecasting using machine learning and neural network models."
authors = [
    { name = "sambaiga", email = "sambaiga@gmail.com" },
    { name = "apina", email = "fred.apina@gmail.com" }
]
readme = "README.md"
license = { text = "Apache-2.0" }

dependencies = [
    "numpy==2.0.0",
    "scikit-learn==1.6.1",
    "pandas>=2.2.3,<3.0.0",
    "pybind11>=2.12,<3.0.0",
    "pyarrow>=17.0.0,<18.0.0",
    "tqdm>=4.66.4,<5.0.0",
    "statsmodels>=0.14.0,<0.15.0",
    "whenever>=0.7.3,<0.8.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mlforenergytransition"]


[tool.commitizen]
bump_message = "bump: v$current_version → v$new_version"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "uv"
allowed_branch_patterns = ["feature/*", "fix/*", "docs/*", "release/*"]